--- a/recipes/grilled-cheese-sandwich.html
+++ b/recipes/grilled-cheese-sandwich.html
@@ -8,7 +8,23 @@
 <body>
     <h1>Grilled Cheese Sandwich</h1>
     <img src="delicious-sandwitches-with-cheese.jpg" height="10%" width="10%">
-   
+    <h2>Ingredient</h2>
+    <ul>
+        <li>4 slices white bread</li>
+        <li>3 tablespoon butter, divided</li>
+        <li>2 slices Cheddar cheese</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Gather all ingredient</li>
+        <li>Preheat a nonstick skillet over medium heat. Generously butter one side of a slice of bread.</li>
+        <li>Place bread butter-side down in the hot skillet; add 1 slice of cheese.</li>
+        <li>Butter a second slice of bread on one side and place butter-side up on top of cheese.</li>
+        <li>Cook until lightly browned on one side; flip over and continue cooking until cheese is melted.</li>
+        <li>Repeat with remaining 2 slices of bread, butter, and slice of cheese. Serve and enjoy!</li>
+
+    </ol>
     <br>
     <a href="../index.html" rel="noopener noreferrer">Go Back</a>
     
