--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipe</title>
 </head>
 <body>
     <h1>Recipe List</h1>
-    <a href="recipes/grilled-cheese-sandwich.html" rel="noopener noreferrer">Griled Cheese Sandwich</a>
-    
+    <ul>
+    <li><a href="recipes/grilled-cheese-sandwich.html" rel="noopener noreferrer">Griled Cheese Sandwich</a></li>
+    <li><a href="recipes/bufallo-chiken-sandwich.html" rel="noopener noreferrer">Bufallo Chicken Sandwich</a></li>
+    </ul>
 </body>
 </html>
