Remove noopener noreferrer

--- a/recipes/bufallo-chiken-sandwich.html
+++ b/recipes/bufallo-chiken-sandwich.html
@@ -28,6 +28,6 @@
 
     </ol>
     <br>
-    <a href="../index.html" rel="noopener noreferrer">Go Back</a>
+    <a href="../index.html"></a>
 </body>
 </html>
