--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Recipe List</h1>
     <ul>
-    <li><a href="recipes/grilled-cheese-sandwich.html" rel="noopener noreferrer">Griled Cheese Sandwich</a></li>
-    <li><a href="recipes/bufallo-chiken-sandwich.html" rel="noopener noreferrer">Bufallo Chicken Sandwich</a></li>
-    <li><a href="recipes/cucumber-sandwich.html" rel="noopener noreferrer">Cucumber Sandwich</a></li>
+    <li><a href="recipes/grilled-cheese-sandwich.html">Griled Cheese Sandwich</a></li>
+    <li><a href="recipes/bufallo-chiken-sandwich.html">Bufallo Chicken Sandwich</a></li>
+    <li><a href="recipes/cucumber-sandwich.html">Cucumber Sandwich</a></li>
     </ul>
 </body>
 </html>
