--- a/recipes/grilled-cheese-sandwich.html
+++ b/recipes/grilled-cheese-sandwich.html
@@ -26,7 +26,7 @@
 
     </ol>
     <br>
-    <a href="../index.html" rel="noopener noreferrer">Go Back</a>
+    <a href="../index.html">Go Back</a>
     
 </body>
 </html>
