Add recipe description

--- a/recipes/bufallo-chiken-sandwich.html
+++ b/recipes/bufallo-chiken-sandwich.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bufallo Chicken Sandwich</title>
+    <title>Buffalo Chicken Sandwich</title>
 </head>
 <body>
-    <h1>Bufallo Chicken Sandwich</h1>
+    <h1>Buffalo Chicken Sandwich</h1>
     <img src="BufalloChikenSandwich.jpg" height="50%" width="50%">
+    <h2>Description</h2>
+    <p>This crockpot Buffalo chicken is great for hearty sandwiches that will please those who love Buffalo chicken wings. This recipe is perfect for those days spent watching football. I like to top these with blue cheese or ranch dressing.</p>
     <h2>Ingredient</h2>
     <ul>
         <li>4 skinless, boneless chicken breast h</li>
