--- a/recipes/cucumber-sandwich.html
+++ b/recipes/cucumber-sandwich.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Cucumber Sandwich</h1>
     <img src="CucumberSandwich.jpg" height="30%" width="30%">
+    <h2>Description</h2>
+    <p>Sandwiches made with herbs and seasoned cream cheese and thin sliced cucumbers.</p>
     <h2>Ingredient</h2>
     <ul>
         <li>12 ounces full-fat cream cheese</li>
