--- a/recipes/grilled-cheese-sandwich.html
+++ b/recipes/grilled-cheese-sandwich.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Grilled Cheese Sandwich</h1>
     <img src="delicious-sandwitches-with-cheese.jpg" height="30%" width="30%">
+    <h2>Description</h2>
+    <p> This recipe calls for sliced Cheddar, which is a wonderfully crowd-pleasing cheese. You can use sharp Cheddar, mild Cheddar, or a blend of both. Another classic choice is plain ol' sliced American cheese – it tastes nostalgic and gives you a gorgeous cheese pull.</p>
     <h2>Ingredient</h2>
     <ul>
         <li>4 slices white bread</li>
