Fix typo on Grilled Cheese Sandwich on index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Recipe List</h1>
     <ul>
-    <li><a href="recipes/grilled-cheese-sandwich.html">Griled Cheese Sandwich</a></li>
+    <li><a href="recipes/grilled-cheese-sandwich.html">Grilled Cheese Sandwich</a></li>
     <li><a href="recipes/bufallo-chiken-sandwich.html">Bufallo Chicken Sandwich</a></li>
     <li><a href="recipes/cucumber-sandwich.html">Cucumber Sandwich</a></li>
     </ul>
